<resources>
    <string name="app_name">My Library</string>
    <string name="rec_books">Recommended Books</string>
    <string name="image">image</string>
    <string name="add_button">add</string>
    <string name="update_button">UPDATE</string>
    <string name="intro_illustration">Intro Illustration</string>
    <string name="welcome">Welcome to your virtual library!</string>
    <string name="intro_text_description">Create your own virtual library by searching and adding books to your personal list.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_up_description_text">Enter your first name, last name, email and password to register.</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your email and password to log in.</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="nav_home">Home</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_my_books">My Books</string>
    <string name="nav_my_stats">Statistics</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>
    <string name="my_books">My Books</string>
    <string name="archive">Archive</string>
    <string name="stats">Statistics</string>
    <string name="add_book_title">Add Book</string>
    <string name="update_book_title">Update Book</string>
    <string name="add_to_collection">Add to Collection</string>
    <string name="book_title">Title</string>
    <string name="book_author">Author</string>
    <string name="book_rating">Average Rating</string>
    <string name="book_rate">My Rating</string>
    <string name="book_series">Series</string>
    <string name="book_notes">Notes</string>
    <string name="book_description">Description</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_language">Language</string>
    <string name="book_genre">Genre</string>
    <string name="book_pages">Pages</string>
    <string name="book_pages_read">Pages read</string>
    <string name="book_edition">Edition</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_publish_year">Published Year</string>
    <string name="book_start_reading_date">Started reading on</string>
    <string name="book_finish_reading_date">Finish reading on</string>
    <string name="book_format">Format</string>
    <string name="search">Search…</string>
    <string name="no_books_in_collection">You don\'t have any books in the collection yet!</string>
    <string name="no_archive">There are no books in the archive!</string>
    <string name="no_recommendations">There are no books recommended yet!</string>
    <string name="no_rec">There are no recommended books for you!</string>
    <string name="slash">/</string>
    <string name="save_the_changes">Save the changes?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="favourite_genres">Favourite Genres</string>
    <string name="number_of_pages_read_every_month">Number of Pages read every month</string>
    <string name="number_of_books_pages_finished_each_month">Number of books/pages finished each month:</string>
    <string name="number_of_books_read_per_month">Number of books read per month</string>
    <string name="favourite_books">Favourite Book</string>
    <string name="total_books_read">Total books read</string>

</resources>