<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/save_the_changes"
        android:textColor="@color/text_color1"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tv_no"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

        <Button
            android:id="@+id/tv_yes"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:backgroundTint="@color/purple_200"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:textSize="16sp"
            />

    </LinearLayout>


</LinearLayout>