<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_purple"
    android:orientation="vertical"
    tools:context=".activities.BookInfoActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_book_info"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_200"
            app:popupTheme="@style/PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_book_info"
            android:layout_width="@dimen/book_image_width"
            android:layout_height="@dimen/book_image_height"
            android:layout_margin="@dimen/login_image_marginTop"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_book" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/auth_marginTop"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:text="@string/book_title"
                android:textColor="@color/text_color2" />

            <TextView
                android:id="@+id/tv_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:textColor="@color/text_color1"
                tools:text="title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:text="@string/book_author"
                android:textColor="@color/text_color2" />

            <TextView
                android:id="@+id/tv_book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:textColor="@color/text_color1"
                tools:text="author" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/my_profile_email_marginTop"
            android:layout_marginRight="@dimen/my_profile_email_marginTop"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:text="@string/book_rating"
                android:textColor="@color/text_color2" />

            <RatingBar
                android:id="@+id/tv_book_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/auth_marginTop"
                android:background="@color/light_purple"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.5" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:text="@string/book_description"
                android:textColor="@color/text_color2" />

            <TextView
                android:id="@+id/tv_book_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:textColor="@color/text_color1"
                tools:text="description" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:text="@string/book_genre"
                android:textColor="@color/text_color2" />

            <TextView
                android:id="@+id/tv_book_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:textColor="@color/text_color1"
                tools:text="genre" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:text="@string/book_pages"
                android:textColor="@color/text_color2" />

            <TextView
                android:id="@+id/tv_book_pages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:textColor="@color/text_color1"
                tools:text="pages" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:text="@string/book_isbn"
                android:textColor="@color/text_color2" />

            <TextView
                android:id="@+id/tv_book_isbn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:textColor="@color/text_color1"
                tools:text="isbn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:text="@string/book_publish_year"
                android:textColor="@color/text_color2" />

            <TextView
                android:id="@+id/tv_book_publish_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/item_book_marginBottom"
                android:textColor="@color/text_color1"
                tools:text="publish_year" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>